--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 sudo: false
 
 before_install:
+  - export PATH=${HOME}/.linuxbrew/bin:${PATH}
   - yes | ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/linuxbrew/go/install)"
   - brew install qgis
 
