--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 before_install:
   - export PATH=${HOME}/.linuxbrew/bin:${PATH}
   - yes | ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Linuxbrew/linuxbrew/go/install)"
-  - brew install qgis
+  - brew install homebrew/science/qgis
 
 install:
   - ./ci/travis/${TRAVIS_OS_NAME}/install.sh
