Add writeXml/readXml methods to QgsOptionalExpression

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -164,7 +164,7 @@ SET(QGIS_CORE_SRCS
   qgsofflineediting.cpp
   qgsogcutils.cpp
   qgsogrutils.cpp
-  qgsoptional.cpp
+  qgsoptionalexpression.cpp
   qgsowsconnection.cpp
   qgspaintenginehack.cpp
   qgspainting.cpp
